--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # -----------------------------------------------------------------------------
 github_username: APooladian
 twitter_username: APooladian
-linkedin_username: # your LinkedIn user name
+linkedin_username: aram-alexandre-pooladian-3276898a
 scholar_userid: # your Google Scholar ID
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
