--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: APooladian
 twitter_username: APooladian
 linkedin_username: aram-alexandre-pooladian-3276898a
-scholar_userid: # your Google Scholar ID
+scholar_userid: 6CNhsjoAAAAJ&hl
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
@@ -35,8 +35,7 @@ publons_id: # your ID on Publons
 research_gate_profile: # your profile on ResearchGate
 blogger_url: # your blogger URL
 
-contact_note: > 
-    Don't forget to Like, Comment, and Subscribe!
+contact_note: > # Don't forget to Like, Comment, and Subscribe!
 
 google_analytics: UA-XXXXXXXXX # out your google-analytics code
 
