--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: APooladian
 twitter_username: APooladian
 linkedin_username: aram-alexandre-pooladian-3276898a
-scholar_userid: 6CNhsjoAAAAJ&hl
+scholar_userid: # 6CNhsjoAAAAJ&hl
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
